minikube/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:

      name: nginx-deployment
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-deployment-pod
          image: nginx:latest
          ports:
            - containerPort: 80
