minikube/service-queen-compare.yml
apiVersion: v1
kind: Service
metadata:
  name: service-queen-compare
  labels:
    app: app-queen-compare
spec:
  type: NodePort
  selector:
    app: app-queen-compare
  ports:
    - port: 9000
      targetPort: 3000
      nodePort: 30007
